fixed some spacing issues on widescreen

--- a/style/style.css
+++ b/style/style.css
@@ -72,7 +72,7 @@ h2 {
     font-weight: 450;
     margin-bottom: 0%;
     margin-top: 0%;
-    padding-bottom: 2%;
+    padding-bottom: 16px;
     padding-top: 2%;
     text-decoration: underline;
     text-decoration-color: var(--uw-purple-secondary);
